# full-stack-fastapi-graphql

./: .dockerignore  .env  .travis.yml  LICENSE  README.md  docker-compose.yml
backend/: backend.dockerfile  pyproject.toml  schema.sdl
backend/app/: alembic.ini  main.py  pyproject.toml
backend/app/alembic/versions/: 4c63714e8c59_create_items_users_table.py
backend/app/api/: deps.py  gql.py
backend/app/core/: config.py  security.py  utils.py
backend/app/crud/: crud.py
backend/app/db/: database.py
backend/app/models/: graphene_models.py  sql_models.py
backend/app/tests/: conftest.py  test_gql.py
